infra/myk8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: event-bus-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: event-bus
    template:
        metadata:
            name: event-bus-pod
            labels:
                app: event-bus
        spec:
            containers:
                - name: event-bus-containers
                  image: lenhat509/event-bus:latest
---
apiVersion: v1
kind: Service
metadata:
    name: event-bus-srv-cip
spec:
    type: ClusterIP # optional
    selector:
        app: event-bus
    ports:
        - name: event-bus
          protocol: TCP
          port: 4005
          targetPort: 4005
