infra/myk8s/posts-depl.yaml
apiVersion: v1
kind: Service
metadata:
    name: posts-srv-cip
spec:
    type: ClusterIP # optional
    selector:
        app: posts
    ports:
        - name: post
          protocol: TCP
          port: 4000
          targetPort: 4000
